Revamp Moderation System Again; Fix Social Features
-Added support for multi-player escalations, punishments, and staff reports
-Added a watchlist for reports that have insufficient evidence but a high level of suspicion
-Holds are now associated with a report and may be auto-escalated. They are automatically applied as either 48-hour mutes or 48-hour bans, depending on the code used.
-Added /releasehold <hold id>
-Added access to /viewpunishments and /removepunishment for Helpers to view and remove punishments that they applied
-Removed view access to closed reports that were not filed by the user
-Improved expiration date formatting
-Staff members who placed non-escalated holds are periodically reminded about them
-Refactored command internals to reduce code duplication
-Only Appeals Team can permanently delete a punishment
-Fixed bugs with /chatreport. Users can now only report messages that they have seen.
-Helpers now have access to the /modqueue for chat reports
-Non-admins can no longer modify or search reports that were filed against them
-Staff members who issue /report are guided through selecting an appropriate punishment code (if possible) and choosing between a punishment, escalation, and hold.
-Suspicious joins now send network-wide staff alerts to moderators+ who are subscribed

-Fixed cross-server synchronization with friends, parties, and private messaging.